# gra-bg-services

./: .gitignore  Dockerfile  README.md  _pyproject.toml  bashit  cli  docker-compose.yml  example.env  pyproject.toml  up.sh
_mongo/: docker-compose.yaml
_redis/: docker-compose.yaml
app/common/: pyproject.toml
app/common/docs/: __init__.md
app/common/docs/kimera/: Bootstrap.md  __init__.md
app/common/docs/kimera/comm/: FastApiWrapper.md  JWTAuth.md  PubSub.md  __init__.md
app/common/docs/kimera/db/: BaseRepo.md  DBFactory.md  MongoDoc.md
app/common/docs/kimera/dev/: GitManager.md  Loggers.md
app/common/docs/kimera/dxs/: __init__.md
app/common/docs/kimera/helpers/: Auth.md  DataMapper.md  Helpers.md  __init__.md
app/common/docs/kimera/mcp/: BaseMCP.md  CommonMCP.md  MCPHelpers.md
app/common/docs/kimera/process/: Spawner.md
app/common/docs/kimera/smBots/: HotDisc.md
app/common/docs/kimera/store/: AutoRepo.md  BaseDocument.md  DummyStore.md  ElasticStore.md  MemStore.md  ResourceRepo.md  VectorStore.md
app/common/src/kimera/: Bootstrap.py  LICENSE  README.md
app/common/src/kimera/auth/: CanonicalAuthRepo.py
app/common/src/kimera/comm/: BaseAuth.py  FastApiWrapper.py  Intercom.py  JWTAuth.py  PubSub.py
app/common/src/kimera/db/: AutoWireRepo.py  BaseRepo.py  DBFactory.py  Database.py  MongoDoc.py  ResourceRepo.py
app/common/src/kimera/dev/: GitManager.py  Loggers.py
app/common/src/kimera/dxs/: BaseDXS.py  CommonDXS.py  ResourceDXS.py
app/common/src/kimera/helpers/: Auth.py  DataMapper.py  Helpers.py  Hook.py  TextExtractors.py
app/common/src/kimera/mcp/: BaseMCP.py  CommonMCP.py  MCPHelpers.py  types.py
app/common/src/kimera/process/: Spawner.py  TaskManager.py  ThreadKraken.py
app/common/src/kimera/smBots/: HotDisc.py
app/common/src/kimera/store/: AutoRepo.py  AutoWireRepo.py  BaseDocument.py  BaseRepo.py  DummyStore.py  ElasticStore.py  FileStore.py  MemStore.py  ResourceRepo.py  Store.py  StoreFactory.py  VectorStore.py
app/config/: consoles.yaml  friends.yaml  kafka.yaml
app/config/storage/: dbs.yaml  stores.yaml
app/ext/mail/: README.md  pyproject.toml
app/ext/mail/src/mailers/resend/: Resend.py  config.yaml  schemas.py
app/src/: Workers.py  cli.py  main.py  routes.hello.yaml  routes.notify.yaml  routes.users.yaml
app/src/api/: HelloDXS.py  NotifyDXS.py  UsersDXS.py
app/src/background/: notifications.py
app/src/comm_types/: CommMessage.py  __init__.py
app/src/console/: JazzCLI.py
app/src/data/models/: User.py
app/src/data/repos/: CommTemplateRepo.py  UserRepo.py
app/src/notifications/: NotificationHandlers.py  __init__.py
docs/kimera/: AGENTS.md
docs/kimera/auth/: CanonicalAuthRepo.md  __init__.md
docs/kimera/comm/: BaseAuth.md  Intercom.md  PubSub.md
docs/kimera/db/: AutoWireRepo.md  Database.md  ResourceRepo.md  __init__.md
docs/kimera/dev/: __init__.md
docs/kimera/dxs/: BaseDXS.md  CommonDXS.md  ResourceDXS.md
docs/kimera/helpers/: Hook.md  TextExtractors.md
docs/kimera/mcp/: __init__.md  types.md
docs/kimera/process/: TaskManager.md  ThreadKraken.md  __init__.md
docs/kimera/smBots/: __init__.md
docs/kimera/store/: AutoWireRepo.md  BaseRepo.md  FileStore.md  Store.md  StoreFactory.md  __init__.md
