[tool.poetry]
name = "app"
version = "0.0.0"
description = "root-template for kimera"
authors = ["Catalin Marin"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
click = "^8.1.2"
rich = "*"
websocket-client = "*"
markdownify = "*"
resend = "*"
asyncpg = "*"
sqlalchemy = "*"


# auth = { git = "https://github.com/catalincelmarin/kimp-ext-auth.git", tag="v1.0.0"}
# byzantium = { git = "https://github.com/catalincelmarin/kimp-ext-byzantium.git", tag="v1.0.0"}
kimcom = { path = "app/common", develop = false }
# kimeraai = {git = "https://github.com/catalincelmarin/kimp-ext-kimeraai.git", tag="v1.0.0" }
# kimera-tsdata = { path = "app/ext/tsdata", develop=false}
# kimera-ml = {git = "https://github.com/catalincelmarin/kimp-ext-kimeraml.git", tag="v1.0.0" }
kimp = "0.1.6"
celery="*"
#confluent-kafka = "*"


[tool.poetry.scripts]
main = "app.src.main:start"
cli = "app.src.cli:start"

[tool.kimp]
extensions = ["app/ext/mail"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

